# Daily_Maximum_Temperature_Forecasting_in_Southern_of_VietNam

./: .gitignore  README.md  pyproject.toml
artifacts/: all_models_summary_20251102_163703.json  hgb_optimized_20251102_163703.joblib  hgb_optimized_metadata_20251102_163703.json  lgb_optimized_20251102_163703.joblib  lgb_optimized_metadata_20251102_163703.json  rf_optimized_metadata_20251102_163703.json  xgb_optimized_20251102_163703.joblib  xgb_optimized_metadata_20251102_163703.json
data/splits/: dt_selected_columns.json  dt_test.csv  dt_val.csv  fe_all_columns.json  fe_dt_selected_columns.json  fe_dt_test.csv  fe_dt_val.csv  fe_test.csv  fe_topk_features.json  fe_val.csv  orig_feature_columns.json  raw_test.csv  raw_val.csv
notebooks/: 1_Preprocessing.ipynb  5_Evaluation_and_Export.ipynb
src/utils/: performance_monitor.py  scores.py  visualization.py
