[project]
name = "ady201m-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi>=0.120.4",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "prophet>=1.1",
    "scikit-learn>=1.3",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.13",
    "tabulate>=0.9.0",
    "wheel>=0.45.1",
    "xgboost>=1.7",
]
